--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   }
   
   main {
-    padding-top: 100px;
+    padding-top: 50px;
   }
   
   h1,
@@ -14,51 +14,81 @@ body {
     text-align: center;
   }
   
-  img {
-    display: block;
-  }
   
   header {
-    position: fixed;
-    text-align: right;
+    position: fixed;  
     top: 0;
+    width: 100%;
+    height: 40px;
+    border-bottom: 10px solid #ccbaab;
+    background-color: #306754;
+    color: white;
+  }
+  
+    .logo {
+    width: 450px;
+    height: 450px;
+    margin: 20px auto;
+    text-align: center;
+    top: 0;
+  }
+  
+  
+   .section-1 {
+    text-align: center;
+    width: 100%;
+    height: 250px;
+    border: none;
+    padding: 1px;
+    background-color: #ccbaab;
+  }
+
+  ul {
+    padding: 0;
+    text-align: right;
+  }
+  li{
+    display: inline;
+    margin: 0 20px;
+    list-style-type: none;
+    font: 100px;
+    color: white;
+  }
+  
+  #section-1 {
+    position: relative;
+    text-align: center;
+    width: 500px;
+    height: 130px;
+    margin: 10px auto;
+    border: 3px solid #d49566;
+    border-radius: 20px;
+    padding: 1px;
+    background-color: #ccbaab;
+  }
+  
+  
+  #footer {
+    text-align: center;
+    color: white;
+    bottom: 0;
     z-index: 2;
     width: 100%;
-    height: 100px;
-    border-bottom: 10px solid darkblue;
-    background-color: lightblue;
+    height: 40px;
+    border-bottom: 10px solid #302913;
+    background-color: #306754;
+    padding: 10px;
+    margin: auto;
   }
   
-  /* Square 1 and 2 */
-  .box {
-    width: 400px;
-    height: 400px;
-    margin: 20px auto;
-    border: 0px solid black;
+  
+  #button {
+    
     text-align: center;
-  }
-  
-  /* Square 2 */
-  .contact {
-    position: relative;
-    width: 500px;
-    height: 100px;
-    margin: 20px auto;
-    border: 5px solid orange;
-  }
-  
-  /* Box 2 in Square 1 */
-  #relative-box-2 {
-    /* TODO: Set the position so it is centered in Square 1 */
-    position: relative;
-    left: 200px;
-  }
-  
-  /* Box 2 in Square 2 */
-  #absolute-box-2 {
-    /* TODO: Set the position so it is outside of the upper-right corner of Square 2 */
-    position: absolute;
     top: 0px;
-    right: -400px;
+    padding: 0;
+    
+    cursor: pointer;
+        
   }
   
